<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignUpActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserratregular"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="25sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/textView_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/ipay"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_signup" />

    <EditText
        android:id="@+id/username_box_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edittext_background"
        android:drawablePadding="25dp"
        android:fontFamily="@font/montserratregular"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_signup" />

    <EditText
        android:id="@+id/email_box_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edittext_background"
        android:drawablePadding="25dp"
        android:fontFamily="@font/montserratregular"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_box_signup" />

    <EditText
        android:id="@+id/phone_box_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edittext_background"
        android:drawablePadding="25dp"
        android:fontFamily="@font/montserratregular"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="12dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_box_signup" />

    <EditText
        android:id="@+id/password_box_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edittext_background"
        android:drawablePadding="25dp"
        android:fontFamily="@font/montserratregular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_box_signup" />

    <EditText
        android:id="@+id/check_password_box_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edittext_background"
        android:drawablePadding="25dp"
        android:fontFamily="@font/montserratregular"
        android:hint="@string/password_check"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_box_signup" />

    <Button
        android:id="@+id/profileimage_button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/montserratregular"
        android:text="@string/upload_profile_picture"
        android:textColor="@color/colorDarkText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_password_box_signup" />

    <Button
        android:id="@+id/complete_button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/montserratbold"
        android:text="@string/signup"
        android:onClick="onSubmit"
        android:textColor="@color/colorDarkText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileimage_button_signup" />

    <TextView
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/already_have_an_account_login_here"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/complete_button_signup"
        app:layout_constraintStart_toStartOf="@+id/complete_button_signup"
        app:layout_constraintTop_toBottomOf="@+id/complete_button_signup"
        android:onClick="onSignIn"/>

</android.support.constraint.ConstraintLayout>